--- a/blogPessoal/tsconfig.json
+++ b/blogPessoal/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+"strictPropertyInitialization": false,//resolver problemas models sem constrtutor, pois não solicita inicializacção dos atributos.
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
